# django-poc-photogram

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: push.yml
docker/server/: healthcheck.py  start.sh
src/photogram/: settings.py
