[tool.poetry]
name = "django-poc-photogram"
version = "0.1.0"
description = ""
authors = ["Marlon Baptista de Quadros"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
Django = "^4.0.6"
psycopg2 = "^2.9.3"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
